--- a/frontend/bookreview/src/Components/Book.css
+++ b/frontend/bookreview/src/Components/Book.css
@@ -1,5 +1,40 @@
+.card {
+  height: 450px; /* Adjust height to look like a book */
+  width: 300px;  /* Adjust width to look like a book */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+
 .card-img-top {
-    height: 200px;
-    object-fit: cover;
-  }
-  
+  height: 60%; /* Adjust height of the image */
+  object-fit: cover;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.card-body {
+  padding: 20px;
+  text-align: start;
+}
+
+.card-title {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.card-text {
+  font-size: 1rem;
+  color: #6c757d;
+  margin-bottom: 0;
+}
+
+.card:hover {
+  cursor: pointer;
+}
