--- a/frontend/bookreview/src/Pages/Login.css
+++ b/frontend/bookreview/src/Pages/Login.css
@@ -1,12 +1,41 @@
-/* Add this CSS file to style the login component */
-
-.background {
-  background: url('../images/logo.jpeg') no-repeat center center fixed;
-  background-size: cover;
-  height: 100vh;
+.container-fluid {
+  background-color: white;
+  min-height: 100vh;
 }
 
 .card {
   max-width: 400px;
   width: 100%;
+}
+
+@media (max-width: 767.98px) {
+  .container-fluid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .col-md-6 {
+    display: none;
+  }
+
+  .col-md-6.d-flex {
+    display: flex !important;
+  }
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #004085;
 }
