--- a/frontend/bookreview/src/Components/UserReview.css
+++ b/frontend/bookreview/src/Components/UserReview.css
@@ -1,4 +1,70 @@
-.user-review .fa-edit,
-.user-review .fa-trash-alt {
+
+
+.user-review {
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  display: flex;
+  height: 200px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.profile-img {
+  width: 20px;
+  height: 20px;
+  margin:10px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.card-title {
+  margin-bottom: 0; /* Remove margin for title */
+}
+
+.rating {
+  font-size: 0.9rem;
+  color: #555;
+  margin: 5px 0; /* Add margin to separate from review text */
+}
+
+.edit-icon, .delete-icon {
   cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.edit-icon:hover {
+  color: #0056b3;
+}
+
+.delete-icon:hover {
+  color: #dc3545;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.me-3 {
+  margin-right: 1rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
